--- a/index.html
+++ b/index.html
@@ -16,8 +16,38 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
-      <a href="" class="btn btn-primary">Click me</a>
+      <div class="weather">
+        <h1>New York</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Cloudy</li>
+        </ul>
+        <div class="row">
+          <div class="col">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+              alt="Cloudy"
+            />
+            12°C | °F
+          </div>
+          <div class="col">
+            <ul>
+              <li>Precipitation: 40%</li>
+              <li>Humidity: 70%</li>
+              <li>Wind: 5 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/mahdieh-br/vanilla-weather-app"
+          target="_blank"
+        >
+          Open-source code</a
+        >
+        by Mahdieh Barati
+      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
