--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -12,11 +11,12 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
   <body>
     <div class="container">
-      <div class="weather">
+      <div class="weather-app">
         <h1>New York</h1>
         <ul>
           <li>Friday 05:00</li>
@@ -38,16 +38,17 @@
             </ul>
           </div>
         </div>
+
+        <small>
+          <a
+            href="https://github.com/mahdieh-br/vanilla-weather-app"
+            target="_blank"
+          >
+            Open-source code</a
+          >
+          by Mahdieh Barati
+        </small>
       </div>
-      <small>
-        <a
-          href="https://github.com/mahdieh-br/vanilla-weather-app"
-          target="_blank"
-        >
-          Open-source code</a
-        >
-        by Mahdieh Barati
-      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
