--- a/index.html
+++ b/index.html
@@ -16,29 +16,38 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>New York</h1>
-        <ul>
-          <li>Friday 05:00</li>
-          <li>Cloudy</li>
-        </ul>
-        <div class="row">
-          <div class="col">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
-              alt="Cloudy"
-            />
-            12°C | °F
-          </div>
-          <div class="col">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>New York</h1>
             <ul>
-              <li>Precipitation: 40%</li>
-              <li>Humidity: 70%</li>
-              <li>Wind: 5 km/h</li>
+              <li>Friday 05:00</li>
+              <li>Cloudy</li>
             </ul>
           </div>
+          <div class="row">
+            <div class="col">
+              <div class="d-flex weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+                  alt="Cloudy"
+                  id="icon"
+                />
+                <div>
+                  <strong id="temperature">12</strong
+                  ><span class="units">°C |<a href="#">°F</a></span>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <ul>
+                <li>Precipitation: 40%</li>
+                <li>Humidity: 70%</li>
+                <li>Wind: 5 km/h</li>
+              </ul>
+            </div>
+          </div>
         </div>
-
         <small>
           <a
             href="https://github.com/mahdieh-br/vanilla-weather-app"
